--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
 
   <body>
     <div id="homepage">
+      <!-- Entete Ohmyfood -->
       <header>
         <h1><img src="images/ohmyfood2.svg" alt="Ohmyfood"></h1>
       </header>
 
+      <!-- Zone Book the menu + How it works -->
       <aside>
         <div class="localisation">
           <p><i class="fas fa-map-marker-alt"></i> Paris, Belleville</p>
@@ -51,18 +53,22 @@
           </ol>
         </div>
         </aside>
+
+        <!-- Zone liste des restaurants -->
         <main>
           <div id=liste_restaurants>
             <h2>Restaurants</h2>
           
             <div class=restaurant>
-              <img src="images/the_full_palette.jpg" alt="The Full Palette">
+              <a href="menu01_the_full_palette.html"><img src="images/the_full_palette.jpg" alt="The Full Palette"></a>
+              <div class=etiquette_new>New</div>
               <h3>The Full Palette</h3>
               <p>New York</p>
             </div>
 
             <div class=restaurant>
               <img src="images/the_enchanted_plate.jpg" alt="The Enchanted Plate">
+              <div class=etiquette_new>New</div>
               <h3>The Enchanted Plate</h3>
               <p>New York</p>
             </div>
