--- a/mentions_legales.html
+++ b/mentions_legales.html
@@ -19,6 +19,13 @@
 
   <body>
 
+    <!--Zone Entete de la page -->
+    <header>
+        <div class="return_btn"><a href="index.html"><img src="images/fleche_gauche.png" alt="Retour Acceuil"></a></div>
+        <h1 class="menu_page_title"><img src="images/ohmyfood2.svg" alt="Ohmyfood"></h1>
+    </header>
+
+    <!--Zone Mentions Legales -->
    <main class="legal_notice">
         <h2 class="legal_notice_title">Mentions Légales</h2>
         <div class="legal_notice_bloc">
