--- a/menu01_the_full_palette.html
+++ b/menu01_the_full_palette.html
@@ -21,7 +21,7 @@
     <div id="menu_page">
       <!--Zone Entete de la page de menu -->
       <header>
-        <div class="return_btn"><a href="http://index.html"><img src="images/fleche_gauche.png" alt="Retour Acceuil"></a></div>
+        <div class="return_btn"><a href="index.html"><img src="images/fleche_gauche.png" alt="Retour Acceuil"></a></div>
         <h1 class="menu_page_title"><img src="images/ohmyfood2.svg" alt="Ohmyfood"></h1>
       </header>
       
