--- a/index.html
+++ b/index.html
@@ -22,14 +22,15 @@
     ></script>
 
     <!-- Lien vers feuille de style CSS-->
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.min.css" />
   </head>
 
+  <!-- Homepage / Page d'acceuil du site Ohmyfood -->
   <body>
-    <div id="homepage">
+    <div class="homepage">
       <!-- Entete Ohmyfood -->
       <header>
-        <h1><img src="images/ohmyfood2.svg" alt="Ohmyfood"></h1>
+        <h1>Ohmyfood</h1>
       </header>
 
       <!-- Zone Book the menu + How it works -->
@@ -38,19 +39,19 @@
           <p><i class="fas fa-map-marker-alt"></i> Paris, Belleville</p>
         </div>
 
-        <div class="btn_zone">
+        <div class="btn_explore">
           <h2>Book the menu you like</h2>
           <p>Discover top-of-the-art restaurants we picked for you</p>
-          <button class="btn_list" type="button">Explore our restaurants</button>
+          <a href="#liste_restaurants">Explore our restaurants</a> 
         </div>
         
         <div class="how_it_works">
           <h2>How it works</h2>
-          <ol>
+          <ul>
             <li><i class="fas fa-mobile-alt"></i> Chose a restaurant</li>
             <li><i class="fas fa-list-ul"></i> Create your menu</li>
             <li><i class="fas fa-store"></i> Go enjoy it at the restaurant</li>
-          </ol>
+          </ul>
         </div>
         </aside>
 
@@ -88,8 +89,9 @@
 
         </main>
 
+<!-- Zone Footer -->
         <footer>
-          <img src="images/ohmyfood2.svg" alt="Ohmyfood">
+          <img src="images/ohmyfood_light.png" alt="Ohmyfood">
           <p><i class="fas fa-utensils"></i> Suggest a restaurant</p>
           <p><i class="fas fa-hands-helping"></i> Become a partner</p>
           <a href="mentions_legales.html" >Legal</a>
