--- a/menu01_the_full_palette.html
+++ b/menu01_the_full_palette.html
@@ -14,11 +14,11 @@
 
     <script src="https://kit.fontawesome.com/eba35291ac.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.min.css" />
   </head>
 
   <body>
-    <div id="menu_page">
+    <div class="menu_page">
       <!--Zone Entete de la page de menu -->
       <header>
         <div class="return_btn"><a href="index.html"><img src="images/fleche_gauche.png" alt="Retour Acceuil"></a></div>
