MAJ02 WorkDay 29sept2020

--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
 
         <div class="how_it_works">
           <h2>How it works</h2>
-          <div class="btn_zone_hiw">
-            <button class="btn_hiw">
-              <i class="fas fa-mobile-alt"></i> Chose a restaurant
-            </button>
-            <button class="btn_hiw">
-              <i class="fas fa-list-ul"></i> Create your menu
-            </button>
-            <button class="btn_hiw">
-              <i class="fas fa-store"></i> Go enjoy it at the restaurant
-            </button>
-          </div>
+          <ol class="btn_zone_hiw">
+              <li class="btn_hiw">
+                  <i class="fas fa-mobile-alt"></i> Chose a restaurant
+              </li>
+              <li class="btn_hiw">
+                  <i class="fas fa-list-ul"></i> Create your menu
+              </li>
+              <li class="btn_hiw">
+                  <i class="fas fa-store"></i> Go enjoy it at the restaurant
+              </li>
+          </ol>
         </div>
       </aside>
 
