--- a/menu01_the_full_palette.html
+++ b/menu01_the_full_palette.html
@@ -20,8 +20,8 @@
   <body>
     <div class="menu_page">
       <!--Zone Entete de la page de menu -->
-      <header>
-        <div class="return_btn"><a href="index.html"><img src="images/fleche_gauche.png" alt="Retour Acceuil"></a></div>
+      <header class="header_page">
+        <a href="index.html"><i class="fas fa-arrow-alt-circle-left"></i></a>
         <h1 class="menu_page_title"><img src="images/ohmyfood2.svg" alt="Ohmyfood"></h1>
       </header>
       
