--- a/mentions_legales.html
+++ b/mentions_legales.html
@@ -21,8 +21,8 @@
 
     <!--Zone Entete de la page -->
     <header class="header_page">
-        <a href="index.html"><i class="fas fa-arrow-alt-circle-left"></i></a>
-        <h1 class="menu_page_title"><img src="images/ohmyfood2.svg" alt="Ohmyfood"></h1>
+        <a href="index.html"><i class="fas fa-arrow-left"></i></a>
+        <div class="menu_page_title"><img src="images/ohmyfood2.svg" alt="Ohmyfood"></div>
     </header>
 
     <!--Zone Mentions Legales -->
