--- a/index.html
+++ b/index.html
@@ -47,17 +47,20 @@
 
         <div class="how_it_works">
           <h2>How it works</h2>
-          <ol class="btn_zone_hiw">
-              <li class="btn_hiw">
+          <div class="btn_zone_hiw">
+              <div class="btn_hiw">
+                  <span>1</span>
                   <i class="fas fa-mobile-alt"></i> Chose a restaurant
-              </li>
-              <li class="btn_hiw">
+              </div>
+              <div class="btn_hiw">
+                  <span>2</span>
                   <i class="fas fa-list-ul"></i> Create your menu
-              </li>
-              <li class="btn_hiw">
+              </div>
+              <div class="btn_hiw">
+                  <span>3</span>
                   <i class="fas fa-store"></i> Go enjoy it at the restaurant
-              </li>
-          </ol>
+              </div>
+          </div>
         </div>
       </aside>
 
