--- a/menu01_the_full_palette.html
+++ b/menu01_the_full_palette.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+
     <title>Ohmyfood! Paris</title>
     <meta name="description" content="Ohmyfood! Commande de repas en ligne." />
 
@@ -12,7 +12,10 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
 
-    <script src="https://kit.fontawesome.com/eba35291ac.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/eba35291ac.js"
+      crossorigin="anonymous"
+    ></script>
 
     <link rel="stylesheet" type="text/css" href="css/style.min.css" />
   </head>
@@ -21,101 +24,100 @@
     <div class="menu_page">
       <!--Zone Entete de la page de menu -->
       <header class="header_page">
-        <a href="index.html"><i class="fas fa-arrow-alt-circle-left"></i></a>
-        <h1 class="menu_page_title"><img src="images/ohmyfood2.svg" alt="Ohmyfood"></h1>
+        <a href="index.html"><i class="fas fa-arrow-left"></i></a>
+        <div class="menu_page_title">
+          <img src="images/ohmyfood2.svg" alt="Ohmyfood" />
+        </div>
       </header>
-      
 
       <!--Zone du Menu : titre + les différents blocs (Entrées / Main dish / Desserts) + bouton order -->
       <div class="menu">
-        <img src="images/the_full_palette.jpg" alt="Photo The full palette">
+        <img src="images/the_full_palette.jpg" alt="Photo The full palette" />
         <div class="menu_title">
-         <h2>The full palette<i class="far fa-heart"></i></h2>
+          <h1>The full palette<i class="far fa-heart"></i></h1>
         </div>
       </div>
 
       <!--Les Entrées -->
       <div class="menu_bloc">
         <h4>ENTREES</h4>
-          <div class="menu_bloc_dish">
-            <h5>Escargots</h5>
-            <p>With southern French spices</p>
-          </div>
-          <div class="menu_bloc_price">
-            <p>25 €</p>
-          </div>
-          <div class="menu_bloc_dish">
-            <h5>Duck Foie Gras</h5>
-            <p>With black truffle shavings</p>
-          </div>
-          <div class="menu_bloc_price">
+        <div class="menu_bloc_dish">
+          <h5>Escargots</h5>
+          <p>With southern French spices</p>
+        </div>
+        <div class="menu_bloc_price">
+          <p>25 €</p>
+        </div>
+        <div class="menu_bloc_dish">
+          <h5>Duck Foie Gras</h5>
+          <p>With black truffle shavings</p>
+        </div>
+        <div class="menu_bloc_price">
           <p>35 €</p>
-          </div>
-          <div class="menu_bloc_dish">
-            <h5>Fried Egg</h5>
-            <p>...</p>
-          </div>
-          <div class="menu_bloc_price">
+        </div>
+        <div class="menu_bloc_dish">
+          <h5>Fried Egg</h5>
+          <p>...</p>
+        </div>
+        <div class="menu_bloc_price">
           <p>20 €</p>
-          </div>
+        </div>
       </div>
 
       <!--Les Plats -->
       <div class="menu_bloc">
         <h4>MAIN DISH</h4>
         <div class="menu_bloc_dish">
-            <h5>Herb-Encrusted Steack</h5>
-            <p>With delicately sliced ans seasoned vegetables</p>
-          </div>
-          <div class="menu_bloc_price">
+          <h5>Herb-Encrusted Steack</h5>
+          <p>With delicately sliced ans seasoned vegetables</p>
+        </div>
+        <div class="menu_bloc_price">
           <p>40 €</p>
-          </div>
-          <div class="menu_bloc_dish">
-            <h5>Ow Tail Shepard's Pie</h5>
-            <p>With black truffle ans pureed parsnips</p>
-          </div>
-          <div class="menu_bloc_price">
+        </div>
+        <div class="menu_bloc_dish">
+          <h5>Ow Tail Shepard's Pie</h5>
+          <p>With black truffle ans pureed parsnips</p>
+        </div>
+        <div class="menu_bloc_price">
           <p>35 €</p>
-          </div>
-          <div class="menu_bloc_dish">
-            <h5>Filet of Sole</h5>
-            <p>With citrus dessing</p>
-          </div>
-          <div class="menu_bloc_price">
+        </div>
+        <div class="menu_bloc_dish">
+          <h5>Filet of Sole</h5>
+          <p>With citrus dessing</p>
+        </div>
+        <div class="menu_bloc_price">
           <p>44 €</p>
-          </div>
+        </div>
       </div>
 
       <!--Les Desserts -->
       <div class="menu_bloc">
         <h4>DESSERTS</h4>
         <div class="menu_bloc_dish">
-            <h5>Paris-Brest</h5>
-            <p>Revisited</p>
-          </div>
-          <div class="menu_bloc_price">
+          <h5>Paris-Brest</h5>
+          <p>Revisited</p>
+        </div>
+        <div class="menu_bloc_price">
           <p>18 €</p>
-          </div>
-          <div class="menu_bloc_dish">
-            <h5>Chocolate Macaroons</h5>
-            <p>With vanilla ice cream</p>
-          </div>
-          <div class="menu_bloc_price">
+        </div>
+        <div class="menu_bloc_dish">
+          <h5>Chocolate Macaroons</h5>
+          <p>With vanilla ice cream</p>
+        </div>
+        <div class="menu_bloc_price">
           <p>22 €</p>
-          </div>
-          <div class="menu_bloc_dish">
-            <h5>Chocolate Mousse</h5>
-            <p>With spices and black truffle</p>
-          </div>
-          <div class="menu_bloc_price">
+        </div>
+        <div class="menu_bloc_dish">
+          <h5>Chocolate Mousse</h5>
+          <p>With spices and black truffle</p>
+        </div>
+        <div class="menu_bloc_price">
           <p>23 €</p>
-          </div>
+        </div>
       </div>
 
       <!--Bouton Order -->
       <button class="btn_order" type="submit">Order</button>
-
     </div>
   </body>
-
-  </html>
+</html>
