--- a/menu01_the_full_palette.html
+++ b/menu01_the_full_palette.html
@@ -22,7 +22,6 @@
 
   <body>
     <div class="menu_page">
-
       <!--Zone Entete de la page de menu -->
       <header class="header_page">
         <a href="index.html"><i class="fas fa-arrow-left"></i></a>
@@ -32,132 +31,135 @@
       </header>
 
       <!--Zone du Menu : titre + les différents blocs (Entrées / Main dish / Desserts) + bouton order -->
-       <!--Zone titre du menu -->
-        <div class="menu_title">
-            <img src="images/the_full_palette.jpg" alt="Photo The full palette" />
-            <div class="menu_title_label">
-                <h1>The full palette</h1>
-                <i class="far fa-heart"></i>
-            </div>
+      <!--Zone titre du menu -->
+      <div class="menu_title">
+        <img src="images/the_full_palette.jpg" alt="Photo The full palette" />
+        <div class="menu_title_label">
+          <h1>The full palette</h1>
+          <i class="far fa-heart"></i>
         </div>
- 
+      </div>
+
       <!--zone du Menu -->
       <div class="menu">
-         <!--Les Entrées -->
+        <!--Les Entrées -->
         <div class="menu_wrapper">
-            <h4><span>ENTR</span>EES</h4>
-            <div class="menu_bloc">
-                <div class="menu_bloc_dish">
-                    <h5>Escargots</h5>
-                    <p>With southern French spices</p>
-                </div>
-                <div class="menu_bloc_price">
-                    <p>25 €</p>
-                </div>
+          <h4><span>ENTR</span>EES</h4>
+          <div class="menu_bloc">
+            <div class="menu_bloc_dish">
+              <h5>Escargots</h5>
+              <p>With southern French spices</p>
             </div>
-            <div class="menu_bloc"> 
-                <div class="menu_bloc_dish">
-                    <h5>Duck Foie Gras</h5>
-                    <p>With black truffle shavings</p>
-                </div>
-                <div class="menu_bloc_price">
-                    <p>35 €</p>
-                </div>
+            <div class="menu_bloc_price">
+              <p>25 €</p>
             </div>
-            <div class="menu_bloc">
-                <div class="menu_bloc_dish">
-                    <h5>Fried Egg</h5>
-                    <p>...</p>
-                </div>
-                <div class="menu_bloc_price">
-                    <p>20 €</p>
-                </div>
+          </div>
+          <div class="menu_bloc">
+            <div class="menu_bloc_dish">
+              <h5>Duck Foie Gras</h5>
+              <p>With black truffle shavings</p>
             </div>
-        </div><!--end div menu_wrapper / fin des entrées-->
+            <div class="menu_bloc_price">
+              <p>35 €</p>
+            </div>
+          </div>
+          <div class="menu_bloc">
+            <div class="menu_bloc_dish">
+              <h5>Fried Egg</h5>
+              <p>...</p>
+            </div>
+            <div class="menu_bloc_price">
+              <p>20 €</p>
+            </div>
+          </div>
+        </div>
+        <!--end div menu_wrapper / fin des entrées-->
 
         <!--Les Plats -->
         <div class="menu_wrapper">
-            <h4><span>MAIN</span> DISH</h4>
-            <div class="menu_bloc">
-                <div class="menu_bloc_dish">
-                    <h5>Herb-Encrusted Steack</h5>
-                    <p>With delicately sliced ans seasoned vegetables</p>
-                </div>
-                <div class="menu_bloc_price">
-                    <p>40 €</p>
-                </div>
+          <h4><span>MAIN</span> DISH</h4>
+          <div class="menu_bloc">
+            <div class="menu_bloc_dish">
+              <h5>Herb-Encrusted Steack</h5>
+              <p>With delicately sliced ans seasoned vegetables</p>
             </div>
+            <div class="menu_bloc_price">
+              <p>40 €</p>
+            </div>
+          </div>
 
-            <div class="menu_bloc">
-                <div class="menu_bloc_dish">
-                    <h5>Ow Tail Shepard's Pie</h5>
-                    <p>With black truffle ans pureed parsnips</p>
-                </div>
-                <div class="menu_bloc_price">
-                    <p>35 €</p>
-                </div>
+          <div class="menu_bloc">
+            <div class="menu_bloc_dish">
+              <h5>Ow Tail Shepard's Pie</h5>
+              <p>With black truffle ans pureed parsnips</p>
             </div>
-            <div class="menu_bloc">
-                <div class="menu_bloc_dish">
-                    <h5>Filet of Sole</h5>
-                    <p>With citrus dessing</p>
-                </div>
-                <div class="menu_bloc_price">
-                    <p>44 €</p>
-                </div>
+            <div class="menu_bloc_price">
+              <p>35 €</p>
             </div>
-        </div><!--end div menu_wrapper / fin des plats-->
+          </div>
+          <div class="menu_bloc">
+            <div class="menu_bloc_dish">
+              <h5>Filet of Sole</h5>
+              <p>With citrus dessing</p>
+            </div>
+            <div class="menu_bloc_price">
+              <p>44 €</p>
+            </div>
+          </div>
+        </div>
+        <!--end div menu_wrapper / fin des plats-->
 
         <!--Les Desserts -->
         <div class="menu_wrapper">
-            <h4><span>DESS</span>ERTS</h4>
-            <div class="menu_bloc">
-                <div class="menu_bloc_dish">
-                    <h5>Paris-Brest</h5>
-                    <p>Revisited</p>
-                </div>
-                <div class="menu_bloc_price">
-                    <p>18 €</p>
-                </div>
+          <h4><span>DESS</span>ERTS</h4>
+          <div class="menu_bloc">
+            <div class="menu_bloc_dish">
+              <h5>Paris-Brest</h5>
+              <p>Revisited</p>
             </div>
-            <div class="menu_bloc">
-                <div class="menu_bloc_dish">
-                    <h5>Chocolate Macaroons</h5>
-                    <p>With vanilla ice cream</p>
-                </div>
-                <div class="menu_bloc_price">
-                    <p>22 €</p>
-                </div>
+            <div class="menu_bloc_price">
+              <p>18 €</p>
             </div>
-            <div class="menu_bloc">
-                <div class="menu_bloc_dish">
-                    <h5>Chocolate Mousse</h5>
-                    <p>With spices and black truffle</p>
-                </div>
-                <div class="menu_bloc_price">
-                    <p>23 €</p>
-                </div>
+          </div>
+          <div class="menu_bloc">
+            <div class="menu_bloc_dish">
+              <h5>Chocolate Macaroons</h5>
+              <p>With vanilla ice cream</p>
             </div>
-        </div><!--end div menu_wrapper / fin des desserts-->
-    </div><!--end div menu-->
-    
-    <!--Bouton Order -->
-    <div class="btn_order">
+            <div class="menu_bloc_price">
+              <p>22 €</p>
+            </div>
+          </div>
+          <div class="menu_bloc">
+            <div class="menu_bloc_dish">
+              <h5>Chocolate Mousse</h5>
+              <p>With spices and black truffle</p>
+            </div>
+            <div class="menu_bloc_price">
+              <p>23 €</p>
+            </div>
+          </div>
+        </div>
+        <!--end div menu_wrapper / fin des desserts-->
+      </div>
+      <!--end div menu-->
+
+      <!--Bouton Order -->
+      <div class="btn_order">
         <a href="#">Order</a>
-    </div>
+      </div>
 
-    
-
-    <!-- Zone Footer -->
+      <!-- Zone Footer -->
       <footer>
         <h1>Ohmyfood</h1>
-        <p><i class="fas fa-utensils"></i>Suggest a restaurant</p>
+        <p><i class="fas fa-utensils"></i> Suggest a restaurant</p>
         <p><i class="fas fa-hands-helping"></i> Become a partner</p>
         <div class="links">
           <div><a href="mentions_legales.html">Legal</a></div>
           <div><a href="mailto:ohmyfood@gmail.com">Contact</a></div>
         </div>
-      </footer> 
-    </div> <!--end div menu_page-->
+      </footer>
+    </div>
+    <!--end div menu_page-->
   </body>
 </html>
