--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="btn_explore">
           <h2>Book the menu you like</h2>
           <p>Discover top-of-the-art restaurants we picked for you</p>
-          <a href="#liste_restaurants">Explore our restaurants</a>
+          <a href="#restaurant_list">Explore our restaurants</a>
         </div>
 
         <div class="how_it_works">
