--- a/menu01_the_full_palette.html
+++ b/menu01_the_full_palette.html
@@ -146,7 +146,7 @@
 
       <!--Bouton Order -->
       <div class="btn_order">
-        <a href="#">Order</a>
+        <a href="order_page.html">Order</a>
       </div>
 
       <!-- Zone Footer -->
