--- a/order_page.html
+++ b/order_page.html
@@ -22,7 +22,7 @@
 
   <body>
 
-    <div class="order_page">
+    <div class="legal_notice_page">
 
       <!--Zone Entete de la page-->
       <header class="header_page">
@@ -37,7 +37,10 @@
           <h3>Informations</h3>
           <p>Site réalisé dans le cadre d'un projet d'étude.<br/> 
           Le contenu présenté ici est purement fictif et n'a aucune visée marchande.</p>
-          <p>Site réalisé par Chrystèle CAIMANT - <a href="https://github.com/Yleac">https://github.com/Yleac</a></p>
+          <p>Site réalisé par Chrystèle CAIMANT</p>
+          <p><a href="https://github.com/Yleac"><i class="fab fa-github"></i> Yleac</a></p> 
         </div>
       </main>
+
+
   </body>
