--- a/menu01_the_full_palette.html
+++ b/menu01_the_full_palette.html
@@ -41,7 +41,7 @@
       </div>
 
       <!--zone du Menu -->
-      <div class="menu">
+      <section class="menu">
         <!--Les Entrées -->
         <div class="menu_wrapper">
           <h4><span>ENTR</span>EES</h4>
@@ -141,7 +141,7 @@
           </div>
         </div>
         <!--end div menu_wrapper / fin des desserts-->
-      </div>
+      </section>
       <!--end div menu-->
 
       <!--Bouton Order -->
