--- a/menu02_the_enchanted_plate.html
+++ b/menu02_the_enchanted_plate.html
@@ -33,7 +33,10 @@
       <!--Zone du Menu : titre + les différents blocs (Entrées / Main dish / Desserts) + bouton order -->
       <!--Zone titre du menu -->
       <div class="menu_title">
-        <img src="images/the_enchanted_plate1.jpg" alt="Photo The Enchanted Plate" />
+        <img
+          src="images/the_enchanted_plate1.jpg"
+          alt="Photo The Enchanted Plate"
+        />
         <div class="menu_title_label">
           <h1>The enchanted plate</h1>
           <i class="far fa-heart"></i>
@@ -51,7 +54,12 @@
               <p>With truffle cream</p>
             </div>
             <div class="menu_bloc_price">
-              <p>25 €</p>
+              <div class="price">
+                <p>25 €</p>
+              </div>
+              <div class="check">
+                <i class="fas fa-check-circle"></i>
+              </div>
             </div>
           </div>
           <div class="menu_bloc">
@@ -60,7 +68,12 @@
               <p>With buckwheat blinis</p>
             </div>
             <div class="menu_bloc_price">
-              <p>35 €</p>
+              <div class="price">
+                <p>35 €</p>
+              </div>
+              <div class="check">
+                <i class="fas fa-check-circle"></i>
+              </div>
             </div>
           </div>
           <div class="menu_bloc">
@@ -69,7 +82,12 @@
               <p>Marinated with orange zest</p>
             </div>
             <div class="menu_bloc_price">
-              <p>20 €</p>
+              <div class="price">
+                <p>20 €</p>
+              </div>
+              <div class="check">
+                <i class="fas fa-check-circle"></i>
+              </div>
             </div>
           </div>
           <div class="menu_bloc">
@@ -78,7 +96,12 @@
               <p>With fig jam and grillet baguette</p>
             </div>
             <div class="menu_bloc_price">
-              <p>35 €</p>
+              <div class="price">
+                <p>35 €</p>
+              </div>
+              <div class="check">
+                <i class="fas fa-check-circle"></i>
+              </div>
             </div>
           </div>
         </div>
@@ -93,7 +116,12 @@
               <p>With white celery puree</p>
             </div>
             <div class="menu_bloc_price">
-              <p>40 €</p>
+              <div class="price">
+                <p>40 €</p>
+              </div>
+              <div class="check">
+                <i class="fas fa-check-circle"></i>
+              </div>
             </div>
           </div>
 
@@ -103,7 +131,12 @@
               <p>With mashed sweet potatoes</p>
             </div>
             <div class="menu_bloc_price">
-              <p>35 €</p>
+              <div class="price">
+                <p>35 €</p>
+              </div>
+              <div class="check">
+                <i class="fas fa-check-circle"></i>
+              </div>
             </div>
           </div>
           <div class="menu_bloc">
@@ -112,7 +145,12 @@
               <p>With wild rice and lemon zest</p>
             </div>
             <div class="menu_bloc_price">
-              <p>44 €</p>
+              <div class="price">
+                <p>44 €</p>
+              </div>
+              <div class="check">
+                <i class="fas fa-check-circle"></i>
+              </div>
             </div>
           </div>
         </div>
@@ -127,7 +165,12 @@
               <p>With caramel butter ice cream</p>
             </div>
             <div class="menu_bloc_price">
-              <p>18 €</p>
+              <div class="price">
+                <p>18 €</p>
+              </div>
+              <div class="check">
+                <i class="fas fa-check-circle"></i>
+              </div>
             </div>
           </div>
           <div class="menu_bloc">
@@ -136,7 +179,12 @@
               <p>With lemon dizzle</p>
             </div>
             <div class="menu_bloc_price">
-              <p>22 €</p>
+              <div class="price">
+                <p>22 €</p>
+              </div>
+              <div class="check">
+                <i class="fas fa-check-circle"></i>
+              </div>
             </div>
           </div>
           <div class="menu_bloc">
@@ -145,7 +193,12 @@
               <p>Destructured</p>
             </div>
             <div class="menu_bloc_price">
-              <p>23 €</p>
+              <div class="price">
+                <p>23 €</p>
+              </div>
+              <div class="check">
+                <i class="fas fa-check-circle"></i>
+              </div>
             </div>
           </div>
         </div>
