--- a/menu03_bastille.html
+++ b/menu03_bastille.html
@@ -51,7 +51,12 @@
               <p>With orange zest</p>
             </div>
             <div class="menu_bloc_price">
-              <p>25 €</p>
+              <div class="price">
+                <p>25 €</p>
+              </div>
+              <div class="check">
+                <i class="fas fa-check-circle"></i>
+              </div>
             </div>
           </div>
           <div class="menu_bloc">
@@ -60,7 +65,12 @@
               <p>Carrots, parsnips, Jerusalem artichoke</p>
             </div>
             <div class="menu_bloc_price">
-              <p>35 €</p>
+              <div class="price">
+                <p>35 €</p>
+              </div>
+              <div class="check">
+                <i class="fas fa-check-circle"></i>
+              </div>
             </div>
           </div>
           <div class="menu_bloc">
@@ -69,7 +79,12 @@
               <p>Revisited</p>
             </div>
             <div class="menu_bloc_price">
-              <p>20 €</p>
+              <div class="price">
+                <p>20 €</p>
+              </div>
+              <div class="check">
+                <i class="fas fa-check-circle"></i>
+              </div>
             </div>
           </div>
         </div>
@@ -84,7 +99,12 @@
               <p>With mashed parsnip</p>
             </div>
             <div class="menu_bloc_price">
-              <p>40 €</p>
+              <div class="price">
+                <p>40 €</p>
+              </div>
+              <div class="check">
+                <i class="fas fa-check-circle"></i>
+              </div>
             </div>
           </div>
 
@@ -94,7 +114,12 @@
               <p>With mashed potatoes</p>
             </div>
             <div class="menu_bloc_price">
-              <p>35 €</p>
+              <div class="price">
+                <p>35 €</p>
+              </div>
+              <div class="check">
+                <i class="fas fa-check-circle"></i>
+              </div>
             </div>
           </div>
           <div class="menu_bloc">
@@ -103,7 +128,12 @@
               <p>With vegetable gnocchis</p>
             </div>
             <div class="menu_bloc_price">
-              <p>44 €</p>
+              <div class="price">
+                <p>44 €</p>
+              </div>
+              <div class="check">
+                <i class="fas fa-check-circle"></i>
+              </div>
             </div>
           </div>
         </div>
@@ -118,7 +148,12 @@
               <p>With hazelnut butter</p>
             </div>
             <div class="menu_bloc_price">
-              <p>18 €</p>
+              <div class="price">
+                <p>18 €</p>
+              </div>
+              <div class="check">
+                <i class="fas fa-check-circle"></i>
+              </div>
             </div>
           </div>
           <div class="menu_bloc">
@@ -127,7 +162,12 @@
               <p>Revisited</p>
             </div>
             <div class="menu_bloc_price">
-              <p>22 €</p>
+              <div class="price">
+                <p>22 €</p>
+              </div>
+              <div class="check">
+                <i class="fas fa-check-circle"></i>
+              </div>
             </div>
           </div>
           <div class="menu_bloc">
@@ -136,7 +176,12 @@
               <p>With blueberries and marzipan</p>
             </div>
             <div class="menu_bloc_price">
-              <p>23 €</p>
+              <div class="price">
+                <p>23 €</p>
+              </div>
+              <div class="check">
+                <i class="fas fa-check-circle"></i>
+              </div>
             </div>
           </div>
         </div>
