--- a/menu04_le_gourmand.html
+++ b/menu04_le_gourmand.html
@@ -51,7 +51,12 @@
               <p>Seasoned with yuzu</p>
             </div>
             <div class="menu_bloc_price">
-              <p>25 €</p>
+              <div class="price">
+                <p>25 €</p>
+              </div>
+              <div class="check">
+                <i class="fas fa-check-circle"></i>
+              </div>
             </div>
           </div>
           <div class="menu_bloc">
@@ -60,7 +65,12 @@
               <p>With seasonal vegetables</p>
             </div>
             <div class="menu_bloc_price">
-              <p>35 €</p>
+              <div class="price">
+                <p>35 €</p>
+              </div>
+              <div class="check">
+                <i class="fas fa-check-circle"></i>
+              </div>
             </div>
           </div>
           <div class="menu_bloc">
@@ -69,7 +79,12 @@
               <p>With truffles</p>
             </div>
             <div class="menu_bloc_price">
-              <p>20 €</p>
+              <div class="price">
+                <p>20 €</p>
+              </div>
+              <div class="check">
+                <i class="fas fa-check-circle"></i>
+              </div>
             </div>
           </div>
         </div>
@@ -84,7 +99,12 @@
               <p>With truffle cream</p>
             </div>
             <div class="menu_bloc_price">
-              <p>40 €</p>
+              <div class="price">
+                <p>40 €</p>
+              </div>
+              <div class="check">
+                <i class="fas fa-check-circle"></i>
+              </div>
             </div>
           </div>
 
@@ -94,7 +114,12 @@
               <p>With seasonal vegetables</p>
             </div>
             <div class="menu_bloc_price">
-              <p>35 €</p>
+              <div class="price">
+                <p>35 €</p>
+              </div>
+              <div class="check">
+                <i class="fas fa-check-circle"></i>
+              </div>
             </div>
           </div>
           <div class="menu_bloc">
@@ -103,7 +128,12 @@
               <p>With mashed parshnips</p>
             </div>
             <div class="menu_bloc_price">
-              <p>44 €</p>
+              <div class="price">
+                <p>44 €</p>
+              </div>
+              <div class="check">
+                <i class="fas fa-check-circle"></i>
+              </div>
             </div>
           </div>
         </div>
@@ -118,7 +148,12 @@
               <p>Chef's choice</p>
             </div>
             <div class="menu_bloc_price">
-              <p>18 €</p>
+              <div class="price">
+                <p>18 €</p>
+              </div>
+              <div class="check">
+                <i class="fas fa-check-circle"></i>
+              </div>
             </div>
           </div>
           <div class="menu_bloc">
@@ -127,7 +162,12 @@
               <p>Revisited</p>
             </div>
             <div class="menu_bloc_price">
-              <p>22 €</p>
+              <div class="price">
+                <p>22 €</p>
+              </div>
+              <div class="check">
+                <i class="fas fa-check-circle"></i>
+              </div>
             </div>
           </div>
           <div class="menu_bloc">
@@ -136,7 +176,12 @@
               <p>With hazelnuts</p>
             </div>
             <div class="menu_bloc_price">
-              <p>23 €</p>
+              <div class="price">
+                <p>23 €</p>
+              </div>
+              <div class="check">
+                <i class="fas fa-check-circle"></i>
+              </div>
             </div>
           </div>
         </div>
