spinner WordDay 9oct2020

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
   <!-- Homepage / Page d'acceuil du site Ohmyfood -->
   <body>
+    <div class="loader"></div>
     <div class="homepage">
       <!-- Entete Ohmyfood -->
       <header>
