--- a/order_page.html
+++ b/order_page.html
@@ -21,7 +21,7 @@
   </head>
 
   <body>
-
+    <div class="loader"></div>
     <div class="legal_notice_page">
 
       <!--Zone Entete de la page-->
@@ -36,11 +36,9 @@
         <div class="legal_notice">
           <h3>Informations</h3>
           <p>Site réalisé dans le cadre d'un projet d'étude.<br/> 
-          Le contenu présenté ici est purement fictif et n'a aucune visée marchande.</p>
+            Le contenu présenté ici est purement fictif et n'a aucune visée marchande.</p>
           <p>Site réalisé par Chrystèle CAIMANT</p>
           <p><a href="https://github.com/Yleac"><i class="fab fa-github"></i> Yleac</a></p> 
         </div>
       </main>
-
-
   </body>
