--- a/menu02_the_enchanted_plate.html
+++ b/menu02_the_enchanted_plate.html
@@ -21,6 +21,7 @@
   </head>
 
   <body>
+    <div class="loader"></div>
     <div class="menu_page">
       <!--Zone Entete de la page de menu -->
       <header class="header_page">
