fix indentation html

--- a/order_page.html
+++ b/order_page.html
@@ -1,44 +1,43 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Ohmyfood! Paris</title>
-    <meta name="description" content="Ohmyfood! Commande de repas en ligne." />
+        <title>Ohmyfood! Paris</title>
+        <meta name="description" content="Ohmyfood! Commande de repas en ligne." />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+        <link rel="manifest" href="/site.webmanifest" />
 
-    <script
-      src="https://kit.fontawesome.com/eba35291ac.js"
-      crossorigin="anonymous"
-    ></script>
+        <script src="https://kit.fontawesome.com/eba35291ac.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" type="text/css" href="css/style.min.css" />
-  </head>
+        <link rel="stylesheet" type="text/css" href="css/style.min.css" />
+    </head>
 
-  <body>
-    <div class="loader"></div>
-    <div class="legal_notice_page">
-
-      <!--Zone Entete de la page-->
-      <header class="header_page">
-        <a href="index.html"><i class="fas fa-arrow-left"></i></a>
-        <div class="menu_page_title">
-          <img src="images/ohmyfood2.svg" alt="Ohmyfood" />
+    <body>
+        <div class="loader">
         </div>
-      </header>
+        <div class="legal_notice_page">
 
-      <main>
-        <div class="legal_notice">
-          <h3>Informations</h3>
-          <p>Site réalisé dans le cadre d'un projet d'étude.<br/> 
-            Le contenu présenté ici est purement fictif et n'a aucune visée marchande.</p>
-          <p>Site réalisé par Chrystèle CAIMANT</p>
-          <p><a href="https://github.com/Yleac"><i class="fab fa-github"></i> Yleac</a></p> 
+            <header class="header_page">
+                <a href="index.html"><i class="fas fa-arrow-left"></i></a>
+                <div class="menu_page_title">
+                    <img src="images/ohmyfood2.svg" alt="Ohmyfood" />
+                </div>
+            </header>
+
+            <main>
+                <div class="legal_notice">
+                    <h3>Informations</h3>
+                    <p>Site réalisé dans le cadre d'un projet d'étude.<br/> 
+                    Le contenu présenté ici est purement fictif et n'a aucune visée marchande.</p>
+                    <p>Site réalisé par Chrystèle CAIMANT</p>
+                    <p><a href="https://github.com/Yleac"><i class="fab fa-github"></i> Yleac</a></p> 
+                </div>
+            </main>
+            
         </div>
-      </main>
-  </body>
+    </body>
