spinner WorkDay 9oct2020

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
 
      <!-- Homepage / Page d'acceuil du site Ohmyfood -->
   <body>
-    <div class="loader"></div>
+    <div class="fa-3x">
+        <i class="fas fa-spinner fa-spin"></i>
+    </div>
+  
     <div class="homepage">
         <!-- Entete Ohmyfood -->
         <header>
