--- a/menu01_the_full_palette.html
+++ b/menu01_the_full_palette.html
@@ -21,7 +21,8 @@
     </head>
 
     <body>
-        <div class="loader">
+        <div class="fa-3x">
+            <i class="fas fa-spinner fa-spin"></i>
         </div>
         <div class="menu_page">
             <!--Zone Entete de la page de menu -->
