--- a/menu02_the_enchanted_plate.html
+++ b/menu02_the_enchanted_plate.html
@@ -18,7 +18,9 @@
     </head>
 
     <body>
-        <div class="loader"></div>
+        <div class="fa-3x">
+            <i class="fas fa-spinner fa-spin"></i>
+        </div>
         <div class="menu_page">
 
             <!--Zone Entete de la page de menu -->
