--- a/mentions_legales.html
+++ b/mentions_legales.html
@@ -18,6 +18,9 @@
   </head>
 
 <body>
+    <div class="fa-3x">
+        <i class="fas fa-spinner fa-spin"></i>
+    </div>
     <div class="legal_notice_page"> 
 
         <!--Zone Entete de la page -->
