--- a/menu04_le_gourmand.html
+++ b/menu04_le_gourmand.html
@@ -18,7 +18,9 @@
     </head>
 
     <body>
-        <div class="loader">
+        <div class="fa-3x">
+            <i class="fas fa-spinner fa-spin"></i>
+        </div>
         </div>
         <div class="menu_page">
 
