fix Spinner 10oct2020

--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
 
      <!-- Homepage / Page d'acceuil du site Ohmyfood -->
   <body>
-    <div class="fa-3x">
-        <i class="fas fa-spinner fa-spin"></i>
-    </div>
+    <div class="loader"></div>
   
     <div class="homepage">
         <!-- Entete Ohmyfood -->
