--- a/order_page.html
+++ b/order_page.html
@@ -29,11 +29,7 @@
 
             <main>
                 <div class="legal_notice">
-                    <h3>Informations</h3>
-                    <p>Site réalisé dans le cadre d'un projet d'étude.<br/> 
-                    Le contenu présenté ici est purement fictif et n'a aucune visée marchande.</p>
-                    <p>Site réalisé par Chrystèle CAIMANT</p>
-                    <p><a href="https://github.com/Yleac"><i class="fab fa-github"></i> Yleac</a></p> 
+                    <h3>Votre commande</h3>
                 </div>
             </main>
             
